[package]
name = "bcs12381-encodings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.3.0"
ark-ec = "0.3.0"
ark-serialize = "0.3.0"
bls12_381 = "0.7.1"
blst = "0.3.10"
hex = "0.4.3"
num-traits = "0.2.15"
serial_test = "0.10.0"

[dev-dependencies]
serial_test = "*"
